home slider not finish

--- a/index.html
+++ b/index.html
@@ -90,11 +90,34 @@
 	<!-- End Header Section -->
 
 	<!-- Start Home Slider Section-->
-	<div class="home-slider my-4">
-		<div class="owl-carousel owl-theme" id="main-slider">
-		    <div class="item">
-		    	
-		    </div>  
+	<div class="home-slider">
+		<div class="section-content">
+			<div class="owl-carousel owl-theme" id="main-slider">
+			    <div class="slider-content">
+			    	<div class="slider-image">
+			    		<img class="img-fluid" src="images/slider1.jpg" alt="Size:1140x550">
+			    	</div>
+			    	<div class="slider-text p-4">
+			    		<p class="date">23 Feb 2018 / <a href="">storrea</a></p>
+			    		<h5><a href="">gallery posts feature</a></h5>
+			    		<p>Aute eligendi cursus cupiditate quisquam hic, illum, pellentesque amet eveniet cillum nesciunt? Nam, enim inventore, eveniet? Mi dignissimos voluptatibus irure fames quaerat tempora delectus? Quis conubia primis cursus, minima sociis cillum, reiciendis enim mo </p>
+
+			    		<a href="">read more</a>
+			    	</div>
+			    </div>  
+			    <div class="slider-content">
+			    	<div class="slider-image">
+			    		<img class="img-fluid" src="images/slider2.jpg" alt="Size:1140x550">
+			    	</div>
+			    	<div class="slider-text p-4">
+			    		<p class="date">23 Feb 2018 / <a href="">storrea</a></p>
+			    		<h5><a href="">gallery posts feature</a></h5>
+			    		<p>Aute eligendi cursus cupiditate quisquam hic, illum, pellentesque amet eveniet cillum nesciunt? Nam, enim inventore, eveniet? Mi dignissimos voluptatibus irure fames quaerat tempora delectus? Quis conubia primis cursus, minima sociis cillum, reiciendis enim mo </p>
+
+			    		<a href="">read more</a>
+			    	</div>
+			    </div>   
+			</div>
 		</div>
 	</div>
 	<!-- End Home Slider Section -->
