--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			                    <a class="nav-link" href="#">styles</a>
 			                </li>
 			                <li class="nav-item">
-			                    <a class="nav-link" data-toggle="modal" data-target="#search">
+			                    <a class="nav-link search" data-toggle="modal" data-target="#search">
 			                    	<i class="icofont-ui-search"></i>
 			                    </a>
 
@@ -62,17 +62,12 @@
 								  <div class="modal-dialog modal-lg">
 								    <div class="modal-content">
 
-									    <!-- Modal Header -->
-									    <div class="modal-header">
-							        		<button type="button" class="close tcolor" data-dismiss="modal">&times;</button>
-									    </div>
-
 									    <!-- Modal body -->
 									    <div class="modal-body pt-5">
 									        <div class="input-group">
 											  	<input type="text" class="form-control" placeholder="Type text and click search icon......">
 												<div class="input-group-append">
-												    <button class="btn" type="submit"><i class="icofont">search_1</i></button> 
+												    <button class="btn" type="submit"><i class="icofont-search-1"></i></button> 
 												</div>
 											</div>
 									    </div>
@@ -99,10 +94,10 @@
 			    	</div>
 			    	<div class="slider-text p-4">
 			    		<p class="date">23 Feb 2018 / <a href="">storrea</a></p>
-			    		<h5><a href="">gallery posts feature</a></h5>
-			    		<p>Aute eligendi cursus cupiditate quisquam hic, illum, pellentesque amet eveniet cillum nesciunt? Nam, enim inventore, eveniet? Mi dignissimos voluptatibus irure fames quaerat tempora delectus? Quis conubia primis cursus, minima sociis cillum, reiciendis enim mo </p>
+			    		<h5 class="text-capitalize"><a href="">gallery posts feature</a></h5>
+			    		<p class="description">Aute eligendi cursus cupiditate quisquam hic, illum, pellentesque amet eveniet cillum nesciunt? Nam, enim inventore, eveniet? Mi dignissimos voluptatibus irure fames quaerat tempora delectus? Quis conubia primis cursus, minima sociis cillum, reiciendis enim mo </p>
 
-			    		<a href="">read more</a>
+			    		<a class="tcolor text-capitalize" href="">read more</a>
 			    	</div>
 			    </div>  
 			    <div class="slider-content">
@@ -111,10 +106,10 @@
 			    	</div>
 			    	<div class="slider-text p-4">
 			    		<p class="date">23 Feb 2018 / <a href="">storrea</a></p>
-			    		<h5><a href="">gallery posts feature</a></h5>
-			    		<p>Aute eligendi cursus cupiditate quisquam hic, illum, pellentesque amet eveniet cillum nesciunt? Nam, enim inventore, eveniet? Mi dignissimos voluptatibus irure fames quaerat tempora delectus? Quis conubia primis cursus, minima sociis cillum, reiciendis enim mo </p>
+			    		<h5 class="text-capitalize"><a href="">gallery posts feature</a></h5>
+			    		<p class="description">Aute eligendi cursus cupiditate quisquam hic, illum, pellentesque amet eveniet cillum nesciunt? Nam, enim inventore, eveniet? Mi dignissimos voluptatibus irure fames quaerat tempora delectus? Quis conubia primis cursus, minima sociis cillum, reiciendis enim mo </p>
 
-			    		<a href="">read more</a>
+			    		<a class="tcolor text-capitalize" href="">read more</a>
 			    	</div>
 			    </div>   
 			</div>
