Blog main post content added

--- a/index.html
+++ b/index.html
@@ -118,12 +118,243 @@
 	<!-- End Home Slider Section -->
 
 	<!-- Start Blog Wrapper -->
-	<div class="blog-wrapper">
+	<div class="blog-wrapper my-5">
 		<div class="row">
 			<div class="col-lg-8 col-md-8 col-sm-8 col-12">
 				<div class="main-content">
-					
+					<!-- Row 1 -->
+					<div class="row">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="post-category my-4">
+								<div class="photo">
+									<a href="">
+										<img class="img-fluid" src="images/pc1.jpg" alt="Image Size:1080x720">
+									</a>
+								</div>
+								<div class="text p-2 text-center">
+									<div class="category-date">
+										<a href="">lifestyle</a>
+										<span>/</span>
+										<time>1 Sep 2018</time>
+									</div>
+									<div class="title my-2">
+										<h4>
+											<a href="">My Lifestyle  tempore sequi expedita</a>
+										</h4>
+									</div>
+									<div class="social-link">
+										<a href=""><i class="icofont-facebook"></i></a>
+										<a href=""><i class="icofont-twitter"></i></a>
+										<a href=""><i class="icofont-instagram"></i></a>
+										<a href=""><i class="icofont-pinterest"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="post-category my-4">
+								<div class="photo">
+									<a href="">
+										<img class="img-fluid" src="images/pc2.jpg" alt="Image Size:1080x720">
+									</a>
+								</div>
+								<div class="text p-2 text-center">
+									<div class="category-date">
+										<a href="">lifestyle</a>
+										<span>/</span>
+										<time>1 Sep 2018</time>
+									</div>
+									<div class="title my-2">
+										<h4>
+											<a href="">My Lifestyle  tempore sequi expedita</a>
+										</h4>
+									</div>
+									<div class="social-link">
+										<a href=""><i class="icofont-facebook"></i></a>
+										<a href=""><i class="icofont-twitter"></i></a>
+										<a href=""><i class="icofont-instagram"></i></a>
+										<a href=""><i class="icofont-pinterest"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Row 2 -->
+					<div class="row">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="post-category my-4">
+								<div class="photo">
+									<a href="">
+										<img class="img-fluid" src="images/pc3.jpg" alt="Image Size:1080x720">
+									</a>
+								</div>
+								<div class="text p-2 text-center">
+									<div class="category-date">
+										<a href="">lifestyle</a>
+										<span>/</span>
+										<time>1 Sep 2018</time>
+									</div>
+									<div class="title my-2">
+										<h4>
+											<a href="">My Lifestyle  tempore sequi expedita</a>
+										</h4>
+									</div>
+									<div class="social-link">
+										<a href=""><i class="icofont-facebook"></i></a>
+										<a href=""><i class="icofont-twitter"></i></a>
+										<a href=""><i class="icofont-instagram"></i></a>
+										<a href=""><i class="icofont-pinterest"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="post-category my-4">
+								<div class="photo">
+									<a href="">
+										<img class="img-fluid" src="images/pc4.jpg" alt="Image Size:1080x720">
+									</a>
+								</div>
+								<div class="text p-2 text-center">
+									<div class="category-date">
+										<a href="">lifestyle</a>
+										<span>/</span>
+										<time>1 Sep 2018</time>
+									</div>
+									<div class="title my-2">
+										<h4>
+											<a href="">My Lifestyle  tempore sequi expedita</a>
+										</h4>
+									</div>
+									<div class="social-link">
+										<a href=""><i class="icofont-facebook"></i></a>
+										<a href=""><i class="icofont-twitter"></i></a>
+										<a href=""><i class="icofont-instagram"></i></a>
+										<a href=""><i class="icofont-pinterest"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Row 3 -->
+					<div class="row">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="post-category my-4">
+								<div class="photo">
+									<a href="">
+										<img class="img-fluid" src="images/pc5.jpg" alt="Image Size:1080x720">
+									</a>
+								</div>
+								<div class="text p-2 text-center">
+									<div class="category-date">
+										<a href="">lifestyle</a>
+										<span>/</span>
+										<time>1 Sep 2018</time>
+									</div>
+									<div class="title my-2">
+										<h4>
+											<a href="">My Lifestyle  tempore sequi expedita</a>
+										</h4>
+									</div>
+									<div class="social-link">
+										<a href=""><i class="icofont-facebook"></i></a>
+										<a href=""><i class="icofont-twitter"></i></a>
+										<a href=""><i class="icofont-instagram"></i></a>
+										<a href=""><i class="icofont-pinterest"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="post-category my-4">
+								<div class="photo">
+									<a href="">
+										<img class="img-fluid" src="images/pc6.jpg" alt="Image Size:1080x720">
+									</a>
+								</div>
+								<div class="text p-2 text-center">
+									<div class="category-date">
+										<a href="">lifestyle</a>
+										<span>/</span>
+										<time>1 Sep 2018</time>
+									</div>
+									<div class="title my-2">
+										<h4>
+											<a href="">My Lifestyle  tempore sequi expedita</a>
+										</h4>
+									</div>
+									<div class="social-link">
+										<a href=""><i class="icofont-facebook"></i></a>
+										<a href=""><i class="icofont-twitter"></i></a>
+										<a href=""><i class="icofont-instagram"></i></a>
+										<a href=""><i class="icofont-pinterest"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Row 4 -->
+					<div class="row">
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="post-category my-4">
+								<div class="photo">
+									<a href="">
+										<img class="img-fluid" src="images/pc3.jpg" alt="Image Size:1080x720">
+									</a>
+								</div>
+								<div class="text p-2 text-center">
+									<div class="category-date">
+										<a href="">lifestyle</a>
+										<span>/</span>
+										<time>1 Sep 2018</time>
+									</div>
+									<div class="title my-2">
+										<h4>
+											<a href="">My Lifestyle  tempore sequi expedita</a>
+										</h4>
+									</div>
+									<div class="social-link">
+										<a href=""><i class="icofont-facebook"></i></a>
+										<a href=""><i class="icofont-twitter"></i></a>
+										<a href=""><i class="icofont-instagram"></i></a>
+										<a href=""><i class="icofont-pinterest"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+							<div class="post-category my-4">
+								<div class="photo">
+									<a href="">
+										<img class="img-fluid" src="images/pc4.jpg" alt="Image Size:1080x720">
+									</a>
+								</div>
+								<div class="text p-2 text-center">
+									<div class="category-date">
+										<a href="">lifestyle</a>
+										<span>/</span>
+										<time>1 Sep 2018</time>
+									</div>
+									<div class="title my-2">
+										<h4>
+											<a href="">My Lifestyle  tempore sequi expedita</a>
+										</h4>
+									</div>
+									<div class="social-link">
+										<a href=""><i class="icofont-facebook"></i></a>
+										<a href=""><i class="icofont-twitter"></i></a>
+										<a href=""><i class="icofont-instagram"></i></a>
+										<a href=""><i class="icofont-pinterest"></i></a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
+					<!-- Load More Button -->
+					<div class="load-button text-center my-4">
+						<a class="btn-fill text-uppercase px-4 py-3" href="">more stories</a>
+					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-12">
@@ -141,7 +372,6 @@
 	</div>
 	<!-- End Footer Section -->
 
-	
 
 	<!-- End Project Code  -->
 
