Blog right content added

--- a/index.html
+++ b/index.html
@@ -359,7 +359,117 @@
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-12">
 				<div class="side-content">
-					
+					<div class="profile my-4 py-5 text-center">
+						<img class="img-fluid rounded-circle mt-5" src="images/profile.jpg" alt="Image Size:120x120">
+
+						<div class="profile-text px-3">
+							<h5 class="text-capitalize my-5">about blog</h5>
+
+							<p>Aliquip eiusmod dolor anim officia nulla exercitation aliquip ex. Consequat ut culpa velit et irure eu commodo sit officia in dolor ut incididunt sint velit.</p>
+
+							<a class="tcolor text-uppercase" href="">read more</a>
+						</div>
+					</div>
+					<div class="recent-post my-4">
+						<div class="header">
+							<h5 class="text-capitalize">recent post</h5>
+							<div class="hbar"></div>
+						</div>
+						<div class="post-list py-4">
+							<ul>
+								<li class="d-flex py-3">
+									<div class="photo">
+										<a href="">
+											<img class="img-fluid" src="images/rp1.jpg" alt="Image Size:1400x1050">
+										</a>
+									</div>
+									<div class="text ml-3">
+										<a href="">Setting up your own Ghost theme</a>
+
+										<time>August 10, 2018</time>
+									</div>
+								</li>
+								<li class="d-flex py-3">
+									<div class="photo">
+										<a href="">
+											<img class="img-fluid" src="images/rp2.jpg" alt="Image Size:1400x1050">
+										</a>
+									</div>
+									<div class="text ml-3">
+										<a href="">Setting up your own Ghost theme</a>
+
+										<time>August 10, 2018</time>
+									</div>
+								</li>
+								<li class="d-flex py-3">
+									<div class="photo">
+										<a href="">
+											<img class="img-fluid" src="images/rp3.jpg" alt="Image Size:1400x1050">
+										</a>
+									</div>
+									<div class="text ml-3">
+										<a href="">Setting up your own Ghost theme</a>
+
+										<time>August 10, 2018</time>
+									</div>
+								</li>
+								<li class="d-flex py-3">
+									<div class="photo">
+										<a href="">
+											<img class="img-fluid" src="images/rp4.jpg" alt="Image Size:1400x1050">
+										</a>
+									</div>
+									<div class="text ml-3">
+										<a href="">Setting up your own Ghost theme</a>
+
+										<time>August 10, 2018</time>
+									</div>
+								</li>
+								<li class="d-flex py-3">
+									<div class="photo">
+										<a href="">
+											<img class="img-fluid" src="images/rp5.jpg" alt="Image Size:1400x1050">
+										</a>
+									</div>
+									<div class="text ml-3">
+										<a href="">Setting up your own Ghost theme</a>
+
+										<time>August 10, 2018</time>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="instagram">
+						<div class="header">
+							<h5 class="text-capitalize">instagram</h5>
+							<div class="hbar"></div>
+						</div>
+						<div class="instagram-content pl-3 my-5">
+							<div class="row">
+								<div class="col">
+									<a href=""><img class="img-fluid" src="images/ing1.jpg" alt="Image Size:640x634"></a>
+								</div>
+								<div class="col">
+									<a href=""><img class="img-fluid" src="images/ing2.jpg" alt="Image Size:640x634"></a>
+								</div>
+								<div class="col">
+									<a href=""><img class="img-fluid" src="images/ing3.jpg" alt="Image Size:640x634"></a>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<a href=""><img class="img-fluid" src="images/ing4.jpg" alt="Image Size:640x634"></a>
+								</div>
+								<div class="col">
+									<a href=""><img class="img-fluid" src="images/ing5.jpg" alt="Image Size:640x634"></a>
+								</div>
+								<div class="col">
+									<a href=""><img class="img-fluid" src="images/ing6.jpg" alt="Image Size:640x634"></a>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
