Blog newsletter section added

--- a/index.html
+++ b/index.html
@@ -476,6 +476,21 @@
 	</div>
 	<!-- End Blog Wrapper -->
 
+	<!-- Start Newsletter Section -->
+	<div class="newsletter">
+		<div class="news-gradient">
+			<div class="news-form">
+				<div class="input-group">
+				  	<input type="text" class="form-control" placeholder="Your Email">
+					<div class="input-group-append">
+					    <button class="btn" type="submit">Subscribe</button> 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End Newsletter Section -->
+
 	<!-- Start Footer Section -->
 	<div class="footer">
 		<p>&copy 2018.powered by <a href="">storrea</a></p>
