Blog Home Page Done

--- a/index.html
+++ b/index.html
@@ -492,7 +492,14 @@
 	<!-- End Newsletter Section -->
 
 	<!-- Start Footer Section -->
-	<div class="footer">
+	<div class="footer py-5">
+		<div class="social my-4">
+			<a href=""><i class="icofont-facebook"></i></a>
+			<a href=""><i class="icofont-twitter"></i></a>
+			<a href=""><i class="icofont-pinterest"></i></a>
+			<a href=""><i class="icofont-youtube-play"></i></a>
+			<a href=""><i class="icofont-google-plus"></i></a>
+		</div>
 		<p>&copy 2018.powered by <a href="">storrea</a></p>
 	</div>
 	<!-- End Footer Section -->
