All done without responsive

--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
 
 				  <!-- Toggler/collapsibe Button -->
 			  		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu">
-					    <span class="navbar-toggler-icon"></span>
+					    <!-- <span class="icofont-navigation-menu"></span> -->
+					    <span class="mt-0"></span>
+					    <span></span>
+					    <span></span>
 				  	</button>
 
 				  <!-- Navbar links -->
 				  	<div class="collapse navbar-collapse" id="mainMenu">
 					    <ul class="navbar-nav mx-auto">
 				      		<li class="nav-item">
-						        <a class="nav-link active" href="#">home</a>
+						        <a class="nav-link active" href="index.html">home</a>
 					      	</li>
 					      	<li class="nav-item">
-						        <a class="nav-link" href="#">about</a>
+						        <a class="nav-link" href="about.html">about</a>
 					      	</li>
 					      	<li class="nav-item">
-			                    <a class="nav-link" href="#">tags</a>
-			                </li>
-			                <li class="nav-item">
-			                    <a class="nav-link" href="#">styles</a>
+			                    <a class="nav-link" href="tag.html">tags</a>
 			                </li>
 			                <li class="nav-item">
 			                    <a class="nav-link search" data-toggle="modal" data-target="#search">
