--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<div class="main-content">
 					<!-- Row 1 -->
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 							<div class="post-category my-4">
 								<div class="photo">
 									<a href="">
@@ -151,7 +151,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 							<div class="post-category my-4">
 								<div class="photo">
 									<a href="">
@@ -181,7 +181,7 @@
 					</div>
 					<!-- Row 2 -->
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 							<div class="post-category my-4">
 								<div class="photo">
 									<a href="">
@@ -208,7 +208,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 							<div class="post-category my-4">
 								<div class="photo">
 									<a href="">
@@ -238,7 +238,7 @@
 					</div>
 					<!-- Row 3 -->
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 							<div class="post-category my-4">
 								<div class="photo">
 									<a href="">
@@ -295,7 +295,7 @@
 					</div>
 					<!-- Row 4 -->
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 							<div class="post-category my-4">
 								<div class="photo">
 									<a href="">
@@ -322,7 +322,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 							<div class="post-category my-4">
 								<div class="photo">
 									<a href="">
