--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<!-- Start Blog Wrapper -->
 	<div class="blog-wrapper my-5">
 		<div class="row">
-			<div class="col-lg-8 col-md-8 col-sm-8 col-12">
+			<div class="col-lg-8 col-md-7 col-sm-6 col-12">
 				<div class="main-content">
 					<!-- Row 1 -->
 					<div class="row">
@@ -265,7 +265,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+						<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
 							<div class="post-category my-4">
 								<div class="photo">
 									<a href="">
@@ -357,7 +357,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 col-12">
+			<div class="col-lg-4 col-md-5 col-sm-6 col-12">
 				<div class="side-content">
 					<div class="profile my-4 py-5 text-center">
 						<img class="img-fluid rounded-circle mt-5" src="images/profile.jpg" alt="Image Size:120x120">
